--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ accompanistPermissions = "0.36.0"
 agp = "8.7.2"
 coilCompose = "2.7.0"
 converterGson = "2.9.0"
+foundation = "1.7.6"
 gson = "2.10.1"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
@@ -12,12 +13,12 @@ espressoCore = "3.6.1"
 kotlinxSerializationJson = "1.7.3"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
-composeBom = "2024.04.01"
+composeBom = "2024.12.01"
 kotlinxCoroutines = "1.9.0"
 loggingInterceptor = "4.12.0"
-material = "1.7.5"
-material3 = "1.4.0-alpha02"
-navigationCompose = "2.8.4"
+material = "1.7.6"
+material3 = "1.4.0-alpha05"
+navigationCompose = "2.8.5"
 retrofit = "2.11.0"
 room = "2.6.1"
 hilt = "2.52"
@@ -29,6 +30,7 @@ workTesting = "2.10.0"
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
 androidx-material = { module = "androidx.compose.material:material", version.ref = "material" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-work-runtime = { module = "androidx.work:work-runtime", version.ref = "workRuntime" }
