--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,12 +22,15 @@ kotlinxCoroutines = "1.9.0"
 loggingInterceptor = "4.12.0"
 material = "1.7.6"
 material3 = "1.4.0-alpha05"
+mockitoCore = "4.8.0"
 navigationCompose = "2.8.5"
 retrofit = "2.11.0"
 room = "2.6.1"
 hilt = "2.52"
 hiltExt = "1.2.0"
+testcoroutinerule = "1.0.1"
 timber = "5.0.1"
+turbine = "0.12.1"
 workRuntime = "2.7.0-alpha05"
 workTesting = "2.10.0"
 
@@ -68,6 +71,7 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 material = { module = "androidx.compose.material.icons:material", version.ref = "material" }
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
@@ -78,7 +82,9 @@ hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testi
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-ext-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hiltExt" }
 hilt-ext-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltExt" }
+testcoroutinerule = { module = "com.github.marcinOz:TestCoroutineRule", version.ref = "testcoroutinerule" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
